update Swagger documentation
