# docs/swagger.json
@@ -6,14 +6,14 @@
     "paths": {
         "/countries/": {
             "get": {
-                "description": "TODO",
+                "description": "Returns all countries available in the database",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "country"
                 ],
-                "summary": "TODO",
+                "summary": "List all available countries",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -30,14 +30,8 @@
                             "$ref": "#/definitions/ErrResponse"
                         }
                     },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/ErrResponse"
                         }
@@ -47,14 +41,14 @@
         },
         "/countries/{name}": {
             "get": {
-                "description": "TODO",
+                "description": "Returns a single country by name",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "country"
                 ],
-                "summary": "TODO",
+                "summary": "Get country by its name",
                 "parameters": [
                     {
                         "type": "string",
@@ -77,14 +71,8 @@
                             "$ref": "#/definitions/ErrResponse"
                         }
                     },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/ErrResponse"
                         }
@@ -94,40 +82,19 @@
         },
         "/emissions/country/": {
             "get": {
-                "description": "TODO",
+                "description": "All historical emissions data of each country accumulated over all years",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "emission country"
                 ],
-                "summary": "TODO",
+                "summary": "List emissions of each country accumulated over all years",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "$ref": "#/definitions/AirPollutionEmissionsResponse"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
+                            "$ref": "#/definitions/AirPollutionCountries"
                         }
                     }
                 }
@@ -135,14 +102,14 @@
         },
         "/emissions/country/{name}": {
             "get": {
-                "description": "TODO",
+                "description": "All historical emissions data of a country accumulated over all years, available in the database",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "emission country"
                 ],
-                "summary": "TODO",
+                "summary": "Get emissions of all years accumulated for a single country",
                 "parameters": [
                     {
                         "type": "string",
@@ -156,7 +123,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/AirPollutionEmissionsResponse"
+                            "$ref": "#/definitions/AirPollutionResponse"
                         }
                     },
                     "400": {
@@ -165,14 +132,8 @@
                             "$ref": "#/definitions/ErrResponse"
                         }
                     },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/ErrResponse"
                         }
@@ -182,40 +143,19 @@
         },
         "/emissions/year/": {
             "get": {
-                "description": "TODO",
+                "description": "All historical emissions data of each year accumulated over all countries",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "emission year"
                 ],
-                "summary": "TODO",
+                "summary": "List emissions of each year accumulated over all countries",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "$ref": "#/definitions/AirPollutionEmissionsResponse"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
+                            "$ref": "#/definitions/AirPollutionYears"
                         }
                     }
                 }
@@ -223,14 +163,14 @@
         },
         "/emissions/year/{year}": {
             "get": {
-                "description": "TODO",
+                "description": "All historical emissions data of a year accumulated over all countries, available in the database",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "emission year"
                 ],
-                "summary": "TODO",
+                "summary": "Get emissions of all countries accumulated for a single year",
                 "parameters": [
                     {
                         "type": "string",
@@ -244,23 +184,11 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/AirPollutionEmissionsResponse"
+                            "$ref": "#/definitions/AirPollutionResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "405": {
-                        "description": "Method Not Allowed",
-                        "schema": {
-                            "$ref": "#/definitions/ErrResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/ErrResponse"
                         }
@@ -270,43 +198,51 @@
         }
     },
     "definitions": {
-        "AirPollutionEmissionsResponse": {
+        "AirPollutionCountries": {
             "type": "object",
             "properties": {
-                "ammonia_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
-                },
-                "black_carbon_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
-                },
-                "carbon_monoxide_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
-                },
-                "nmvoc_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
-                },
-                "nox_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
-                },
-                "organic_carbon_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
-                },
-                "sulphur_dioxide_emissions": {
-                    "$ref": "#/definitions/AirPollutionResponse"
+                "countries": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/AirPollutionResponse"
+                    }
                 }
             }
         },
         "AirPollutionResponse": {
             "type": "object",
             "properties": {
-                "average": {
-                    "type": "number"
+                "ammonia_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
                 },
-                "median": {
-                    "type": "number"
+                "black_carbon_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
                 },
-                "standard_deviation": {
-                    "type": "number"
+                "carbon_monoxide_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
+                },
+                "nmvoc_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
+                },
+                "nox_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
+                },
+                "organic_carbon_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
+                },
+                "sulphur_dioxide_emissions": {
+                    "$ref": "#/definitions/EmissionsResponse"
+                }
+            }
+        },
+        "AirPollutionYears": {
+            "type": "object",
+            "properties": {
+                "years": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "$ref": "#/definitions/AirPollutionResponse"
+                    }
                 }
             }
         },
@@ -321,11 +257,30 @@
                 }
             }
         },
+        "EmissionsResponse": {
+            "type": "object",
+            "properties": {
+                "average": {
+                    "type": "number"
+                },
+                "median": {
+                    "type": "number"
+                },
+                "standard_deviation": {
+                    "type": "number"
+                }
+            }
+        },
         "ErrResponse": {
             "type": "object",
             "properties": {
-                "status": {
-                    "type": "integer"
+                "code": {
+                    "type": "integer",
+                    "example": 404
+                },
+                "error": {
+                    "type": "string",
+                    "example": "The requested resource was not found on the server."
                 },
                 "text": {
                     "type": "string"
