# internal/resource/emissions.go
@@ -8,81 +8,12 @@ import (
 	"fmt"
 	"github.com/go-chi/chi/v5"
 	"github.com/go-chi/render"
-	"github.com/montanaflynn/stats"
 	"net/http"
 	"strconv"
 )
 
 type EmissionResource struct {
 	Storage store.Storage
-}
-
-// AirPollutionResponse TODO
-type airPollutionResponse struct {
-	Average           float64 `json:"average"`
-	Median            float64 `json:"median"`
-	StandardDeviation float64 `json:"standard_deviation"`
-} // @name AirPollutionResponse
-
-func newAirPollutionResponse(emissions []*model.Emissions, f func(emission *model.Emissions) float64) airPollutionResponse {
-	total := 0.0
-	values := make([]float64, len(emissions))
-
-	for i, emission := range emissions {
-		current := f(emission)
-		values[i] = current
-		total = total + current
-	}
-
-	median, _ := stats.Median(values)
-	standardDeviation, _ := stats.StandardDeviation(values)
-
-	return airPollutionResponse{
-		Average:           total / float64(len(emissions)),
-		Median:            median,
-		StandardDeviation: standardDeviation,
-	}
-}
-
-// AirPollutionEmissionsResponse TODO
-type airPollutionEmissionsResponse struct {
-	NOxEmissions   airPollutionResponse `json:"nox_emissions"`
-	SO2Emissions   airPollutionResponse `json:"sulphur_dioxide_emissions"`
-	COEmissions    airPollutionResponse `json:"carbon_monoxide_emissions"`
-	OCEmissions    airPollutionResponse `json:"organic_carbon_emissions"`
-	NMVOCEmissions airPollutionResponse `json:"nmvoc_emissions"`
-	BCEmissions    airPollutionResponse `json:"black_carbon_emissions"`
-	NH3Emissions   airPollutionResponse `json:"ammonia_emissions"`
-} // @name AirPollutionEmissionsResponse
-
-func newAirPollutionEmissionsResponse(emissions []*model.Emissions) airPollutionEmissionsResponse {
-	return airPollutionEmissionsResponse{
-		NOxEmissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.NOxEmissions
-		}),
-		SO2Emissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.SO2Emissions
-		}),
-		COEmissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.COEmissions
-		}),
-		OCEmissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.OCEmissions
-		}),
-		NMVOCEmissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.NMVOCEmissions
-		}),
-		BCEmissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.BCEmissions
-		}),
-		NH3Emissions: newAirPollutionResponse(emissions, func(emissions *model.Emissions) float64 {
-			return emissions.NH3Emissions
-		}),
-	}
-}
-
-func (hr airPollutionEmissionsResponse) Render(w http.ResponseWriter, r *http.Request) error {
-	return nil
 }
 
 func (rs EmissionResource) Routes() chi.Router {
@@ -101,30 +32,33 @@ func (rs EmissionResource) Routes() chi.Router {
 	return r
 }
 
-// ListByYear TODO
-// @Summary TODO
-// @Description TODO
+// ListByYear returns the emissions of all countries accumulated for each year
+// @Summary List emissions of each year accumulated over all countries
+// @Description All historical emissions data of each year accumulated over all countries
 // @Tags emission year
 // @Produce json
 // @Router /emissions/year/ [get]
-// @Success 200 {object} map[country]AirPollutionEmissionsResponse
+// @Success 200 {object} AirPollutionYears
 func (rs EmissionResource) ListByYear(w http.ResponseWriter, r *http.Request) {
-	response := make(map[int]airPollutionEmissionsResponse)
+	response := AirPollutionYears{
+		Years: make(map[int]AirPollutionResponse),
+	}
+
 	for year, emissions := range rs.Storage.FindAllByYears() {
-		response[year] = newAirPollutionEmissionsResponse(emissions)
+		response.Years[year] = newAirPollutionEmissionsResponse(emissions)
 	}
 
 	_ = json.NewEncoder(w).Encode(response)
 }
 
-// GetByYear TODO
-// @Summary TODO
-// @Description TODO
+// GetByYear returns the emissions of all countries accumulated for a single year
+// @Summary Get emissions of all countries accumulated for a single year
+// @Description All historical emissions data of a year accumulated over all countries, available in the database
 // @Tags emission year
 // @Produce json
 // @Router /emissions/year/{year} [get]
 // @Param year path string true "year"
-// @Success 200 {object} AirPollutionEmissionsResponse
+// @Success 200 {object} AirPollutionResponse
 // @Failure 400 {object} ErrResponse
 func (rs EmissionResource) GetByYear(w http.ResponseWriter, r *http.Request) {
 	year, err := strconv.Atoi(chi.URLParam(r, "year"))
@@ -138,36 +72,38 @@ func (rs EmissionResource) GetByYear(w http.ResponseWriter, r *http.Request) {
 		yearEmissions = append(yearEmissions, emissions)
 	}
 
-	w.Header().Set("Content-Type", "application/json")
 	response := newAirPollutionEmissionsResponse(yearEmissions)
 	_ = render.Render(w, r, response)
 }
 
-// ListByCountry TODO
-// @Summary TODO
-// @Description TODO
+// ListByCountry returns the emissions of all years accumulated for each country
+// @Summary List emissions of each country accumulated over all years
+// @Description All historical emissions data of each country accumulated over all years
 // @Tags emission country
 // @Produce json
 // @Router /emissions/country/ [get]
-// @Success 200 {object} map[year]AirPollutionEmissionsResponse
+// @Success 200 {object} AirPollutionCountries
 func (rs EmissionResource) ListByCountry(w http.ResponseWriter, r *http.Request) {
-	response := make(map[string]airPollutionEmissionsResponse)
-	for country, emissions := range rs.Storage.FindAllByCountries() {
-		response[country] = newAirPollutionEmissionsResponse(emissions)
+	response := AirPollutionCountries{
+		Countries: make(map[string]AirPollutionResponse),
 	}
 
-	w.Header().Set("Content-Type", "application/json")
-	_ = json.NewEncoder(w).Encode(response)
+	for country, emissions := range rs.Storage.FindAllByCountries() {
+		response.Countries[country] = newAirPollutionEmissionsResponse(emissions)
+	}
+
+	_ = render.Render(w, r, response)
+
 }
 
-// GetByCountry TODO
-// @Summary TODO
-// @Description TODO
+// GetByCountry returns the emissions of all years accumulated for a single country
+// @Summary Get emissions of all years accumulated for a single country
+// @Description All historical emissions data of a country accumulated over all years, available in the database
 // @Tags emission country
 // @Produce json
 // @Router /emissions/country/{name} [get]
 // @Param name path string true "name of the country"
-// @Success 200 {object} AirPollutionEmissionsResponse
+// @Success 200 {object} AirPollutionResponse
 // @Failure 400 {object} ErrResponse
 // @Failure 404 {object} ErrResponse
 func (rs EmissionResource) GetByCountry(w http.ResponseWriter, r *http.Request) {
